assets/scss/common/_dark.scss
/** Theme variables */

// Source: https://material.io/design/color/dark-theme.html

$body-bg-dark: $gray-900;
$body-overlay-dark: darken($body-bg-dark, 2.5%);

/*
$border-dark: darken($body-bg-dark, 2.5%);
*/
$border-dark: $gray-800;
$body-color-dark: $gray-300;
$dots-dark: darken($body-color-dark, 50%);

$link-color-dark: $blue-300;
$button-color-dark: $link-color-dark;
$focus-color-dark: lighten($link-color-dark, 2.5%);

$navbar-dark-color:                 $body-color-dark;
$navbar-dark-hover-color:           $link-color-dark;
$navbar-dark-active-color:          $link-color-dark;

/** Theme styles */

[data-dark-mode] body {
  background: $body-bg-dark;
  color: $body-color-dark;
}

[data-dark-mode] body a {
  color: $link-color-dark;
}

[data-dark-mode] body a.text-body {
  color: $body-color-dark !important;
}

[data-dark-mode] body .btn-primary {
  @include button-variant($button-color-dark, $button-color-dark);

  color: $body-bg-dark !important;
}

[data-dark-mode] body .btn-outline-primary {
  @include button-outline-variant($button-color-dark, $button-color-dark);

  color: $link-color-dark;
}

[data-dark-mode] body .btn-outline-primary:hover {
  color: $body-bg-dark;
}

[data-dark-mode] body .btn-doks-light {
  color: $navbar-dark-color;
}

[data-dark-mode] body .show > .btn-doks-light,
[data-dark-mode] body .btn-doks-light:hover,
[data-dark-mode] body .btn-doks-light:active {
  color: $link-color-dark;
}

[data-dark-mode] body .btn-menu svg {
  color: $body-color-dark;
}

[data-dark-mode] body .doks-sidebar-toggle {
  color: $navbar-dark-color;
}

[data-dark-mode] body .btn-menu:hover,
[data-dark-mode] body .btn-doks-light:hover,
[data-dark-mode] body .doks-sidebar-toggle:hover {
  background: $body-overlay-dark;
}

/*
[data-dark-mode] body .dropdown-menu {
  @extend .dropdown-menu-dark;
}
*/

[data-dark-mode] body .navbar,
[data-dark-mode] body .doks-subnavbar {
  background-color: rgba(33, 37, 41, 0.95);
  border-bottom: 1px solid $border-dark;
}

[data-dark-mode] body.home .navbar {
  border-bottom: 0;
}

[data-dark-mode] body .offcanvas-header {
  border-bottom: 1px solid $gray-800;
}

[data-dark-mode] body .offcanvas .nav-link {
  color: $body-color-dark;
}

[data-dark-mode] body .offcanvas .nav-link:hover,
[data-dark-mode] body .offcanvas .nav-link:focus {
  color: $link-color-dark;
}

[data-dark-mode] body .offcanvas .nav-link.active {
  color: $link-color-dark;
}

[data-dark-mode] body .navbar-light .navbar-brand {
  color: $navbar-dark-color !important;
}

[data-dark-mode] body .navbar-light .navbar-nav .nav-link {
  color: $navbar-dark-color;
}

[data-dark-mode] body .navbar-light .navbar-nav .nav-link:hover,
[data-dark-mode] body .navbar-light .navbar-nav .nav-link:focus {
  color: $navbar-dark-hover-color;
}

[data-dark-mode] body .navbar-light .navbar-nav .nav-link.disabled {
  color: $navbar-dark-disabled-color;
}

[data-dark-mode] body .navbar-light .navbar-nav .show > .nav-link,
[data-dark-mode] body .navbar-light .navbar-nav .active > .nav-link,
[data-dark-mode] body .navbar-light .navbar-nav .nav-link.show,
[data-dark-mode] body .navbar-light .navbar-nav .nav-link.active {
  color: $navbar-dark-active-color;
}

[data-dark-mode] body .navbar-light .navbar-text {
  color: $navbar-dark-color;
}

[data-dark-mode] body .alert-primary a {
  color: $body-bg-dark;
}

[data-dark-mode] body .alert-doks {
  background: $body-overlay-dark;
  color: $body-color-dark;
}

[data-dark-mode] body .alert-doks a {
  color: $link-color-dark;
}

[data-dark-mode] body .page-links a {
  color: $body-color-dark;
}

[data-dark-mode] body .btn-toggle-nav a {
  color: $body-color-dark;
}

[data-dark-mode] body .showcase-meta a {
  color: $body-color-dark;
}

[data-dark-mode] body .showcase-meta a:hover,
[data-dark-mode] body .showcase-meta a:focus {
  color: $link-color-dark;
}

[data-dark-mode] body .docs-link:hover,
[data-dark-mode] body .docs-link.active,
[data-dark-mode] body .page-links a:hover {
  text-decoration: none;
  color: $link-color-dark;
}

[data-dark-mode] body .btn-toggle {
  color: $body-color-dark;
  background-color: transparent;
  border: 0;
}

[data-dark-mode] body .btn-toggle:hover,
[data-dark-mode] body .btn-toggle:focus {
  color: $body-color-dark;
}

[data-dark-mode] body .btn-toggle::before {
  width: 1.25em;
  line-height: 0;
  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28222, 226, 230, 0.75%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
  transition: transform 0.35s ease;
  transform-origin: 0.5em 50%;
  margin-bottom: 0.125rem;
}

[data-dark-mode] body .btn-toggle[aria-expanded="true"] {
  color: $body-color-dark;
}

[data-dark-mode] body .btn-toggle[aria-expanded="true"]::before {
  transform: rotate(90deg);
}

[data-dark-mode] body .btn-toggle-nav a:hover,
[data-dark-mode] body .btn-toggle-nav a:focus {
  color: $link-color-dark;
}

[data-dark-mode] body .btn-toggle-nav a.active {
  color: $link-color-dark;
}

[data-dark-mode] body .navbar-light .navbar-text a {
  color: $navbar-dark-active-color;
}

[data-dark-mode] body .docs-links h3.sidebar-link a,
[data-dark-mode] body .page-links h3.sidebar-link a {
  color: $body-color-dark;
}

[data-dark-mode] body .navbar-light .navbar-text a:hover,
[data-dark-mode] body .navbar-light .navbar-text a:focus {
  color: $navbar-dark-active-color;
}

[data-dark-mode] body .navbar .btn-link {
  color: $navbar-dark-color;
}

[data-dark-mode] body .content .btn-link {
  color: $link-color-dark;
}

[data-dark-mode] body .content .btn-link:hover {
  color: $link-color-dark;
}

[data-dark-mode] body .content img[src^="https://latex.codecogs.com/svg.latex"] {
  filter: invert(1);
}

[data-dark-mode] body .navbar .btn-link:hover {
  color: $navbar-dark-hover-color;
}

[data-dark-mode] body .navbar .btn-link:active {
  color: $navbar-dark-active-color;
}
/* ... */

